--- a/.env
+++ b/.env
@@ -21,6 +21,8 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_DOMAIN=.streamevents.com
+SANCTUM_STATEFUL_DOMAINS=streamevents.com,localhost,127.0.0.1
 
 MEMCACHED_HOST=127.0.0.1
 
